# graphql_ex

./: .gitignore  README.md  pyproject.toml  schema.graphql
app/: broadcaster.py  context.py  data_store.py  main.py  models.py
app/schema/: mutations.py  queries.py  schema.py  subscriptions.py  types.py
knowledge-base/: dataloader.md  learn_graphql.md  subscriptions.md
scripts/: export_schema.py
tests/: conftest.py  test_mutations.py  test_queries.py  test_subscriptions.py
